--- a/Lokaverkefni_2019/vefsiða/bifreiðir/bifreidir.html
+++ b/Lokaverkefni_2019/vefsiða/bifreiðir/bifreidir.html
@@ -50,7 +50,7 @@
             </div>
 
             <div class="searchbar">
-                    <input type="textfield" id="search_bar" placeholder="Leita að bifreið" onkeyup="searchDropdown()">
+                    <input type="textfield" id="search_bar" placeholder="Leita að bifreið">
             </div>
 
             <div class="main" id="main">
