--- a/Lokaverkefni_2019/vefsiða/index.html
+++ b/Lokaverkefni_2019/vefsiða/index.html
@@ -53,7 +53,7 @@
             </div>
 
             <div class="searchbar">
-                <input type="textfield" id="search_bar" placeholder="Leita að verkfæri" onkeyup="searchDropdown()">
+                <input type="textfield" id="search_bar" placeholder="Leita að verkfæri">
             </div>
 
             <div class="main" id="main">
