--- a/Lokaverkefni_2019/vefsiða/starfsmenn/starfsmenn.html
+++ b/Lokaverkefni_2019/vefsiða/starfsmenn/starfsmenn.html
@@ -55,7 +55,7 @@
             </div>
 
             <div class="searchbar">
-                    <input type="textfield" id="search_bar" placeholder="Leita að starfsmanni" onkeyup="searchDropdown()">
+                    <input type="textfield" id="search_bar" placeholder="Leita að starfsmanni">
             </div>
 
             <div class="main" id="main">
