--- a/index.html
+++ b/index.html
@@ -1,110 +1,23 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<link rel="stylesheet" href="heimasida.css">
-	<link rel="icon" href="https://i.ndtvimg.com/i/2017-11/f1-logo-2018_827x510_81511713381.png">
-	<title>Heimasíðan mín</title>
-</head>
-<body>
-	<div class="wrapper">
-        <!-- Header  & valmynd -->
-        <nav class="nav">
-            <div class="dropdown">
-                <button class="dropbtn">Valmynd</button>
-                <nav class="dropdown-content">
-                    <a href="#">VEFÞ1VG05</a>
-                    <a href="#ummig">Um mig</a>
-                    <a href="#ahugamal">Ahugamal</a>
-					<a href="#verkefni">Verkefni</a>
-                </nav>
-            </div>
-			<a class="valmynd" href="#"><span class="nafn">Askur Hugi Hallgrímsson</span></a>
-			<img class="logo" src="https://www.nuclearblast.de/static/articles/226/226443-0.png/1000x1000.png" alt="logo">
-        </nav>
-		<!-- Content síðunnar -->
-		<section class="content">
-			<span class="anchor" id="ummig"></span>
-			<div class="ummig">
-				<div class="eg">
-					<h1>Ég</h1>
-					<p>Askur Hugi heiti ég og er nemandi í Tækniskólanum. Brautin sem ég valdi mér í skólanum er K2 og tek ég VEFÞ1VG05AU sem valáfanga. Ég hef gaman af ýmsum tölvuleikjum ásamt tónlistargerð.</p>
-					<img class="media" width="450" height="450" src="https://scontent.frkv1-1.fna.fbcdn.net/v/t1.0-9/33146664_1340128449422188_5640010654921261056_n.jpg?_nc_cat=111&_nc_ht=scontent.frkv1-1.fna&oh=2d4485eaf664e343d45a1c1938e9419d&oe=5C654AD8" alt="Ég">
-				</div>
-				<div class="menntun">
-					<h1>Menntun</h1>
-					<dl>
-						<dt>Grunnskóli</dt>
-						<dd>- Laugalækjarskóli</dd>
-						<dt>Menntaskóli (núverandi)</dt>
-						<dd>- Tækniskólinn</dd>
-					</dl>
-					<iframe frameborder="0" width="400px" height="400px" src="https://ja.is/webapi/kort/?x=357611&y=407712&z=8&layer=map&q=hashid%3APlV88"></iframe>
-				</div>
-			</div>
-			<span class="anchor" id="ahugamal"></span>
-			<div class="ahugamal">
-				<h1>Áhugamálin mín</h1>
-				<section class="">
-					<div class="grid">
-						<div><dt class="texti">Tölvuleikir</dt>
-						<dd class="texti">Uppáhaldstölvuleikirnir mínir eru kappakstursleikir, stjórnunarleikir og fyrstu persónu skotleikir. Einnig finnst mér gaman að spila sögu-drifna leiki og hvað sem er vinsælast í augnablikinu.</dd>
-						</div>
-						<div><img class="media" width="450" height="315" src="https://i.imgur.com/IKrfkb3.jpg" alt="Kappaksturs-gervirinn sem ég nota"></div>
-					</div>
-					<div class="grid">
-						<div>
-						<dt class="texti">Tónlist</dt>
-						<dd class="texti">Ég hlusta mikið á tónlist (um 40.000 mínútur á árinu 2018) og þá sérstakleg á hip hop. Einnig hlusta ég mikið á Metal og þá sérstaklega Thrash Metal.</dd>
-						</div>
-						<div>
-						<img class="media" width="400" height="400" src="https://timedotcom.files.wordpress.com/2015/01/joey-bada.jpg" >
-						<audio class="media" src="03 Paper Trail$.mp3" controls></audio>
-						</div>
-					</div>
-					<div class="grid">
-						<div>
-						<dt class="texti"></dt>
-						<dd class="texti">Þar sem ég hef gaman að því að búa til tónlist og þá sérstaklega hip hop takta, finnst mér afar gaman að horfa á "deconstructed" video'in frá Genius rásinni á YouTube. </dd>
-						</div>
-						<div>
-						<iframe class="media" width="560" height="315" src="https://www.youtube.com/embed/lH5ROxbKig4" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-						</div>
-					</div>
-				</section>
-			</div>
-		</section>
-		<!-- Footer -->
-		<span class="anchor" id="verkefni"></span>
-		<div class="verkefni">
-			<footer>
-				<nav>
-            		<h4>Verkefni 6 - Forsíðan mín </h4>
-            		<dl>
-                		<dt>Nafn</dt>
-                		<dd>Askur Hugi Hallgrímsson</dd>
-                		<dt>Tölvupóstur</dt>
-                		<dd>askur000@gmail.com</dd>
-                		<dt>Áfangi og braut</dt>
-                		<dd>VEFÞ1VG05AU, K2</dd>
-                		<dt>Skóli</dt>
-                		<dd>Upplýsingatækniskólinn</dd>
-            		</dl>
-        		</nav>
-        		<nav>
-            		<h4>Innri tenglar <em>(relative links)</em></h4>
-            		<ul>
-                		<li><a class="skipta" href="https://zkur1.github.io/Verkefni-1/">Verkefni 1</a></li>
-                		<li><a class="skipta" href="https://zkur1.github.io/Verkefni-2/">Verkefni 2</a></li>
-                		<li><a class="skipta" href="https://zkur1.github.io/Verkefni-3/verkefni-3.1/">Verkefni 3.1</a></li>
-                		<li><a class="skipta" href="https://zkur1.github.io/Verkefni-3/verkefni-3.2/">Verkefni 3.2</a></li>
-                		<li><a class="skipta" href="https://zkur1.github.io/Verkefni-3/verkefni-3.3/sida2/index.html">Verkefni 3.3</a></li>
-				<li><a class="skipta" href="https://zkur1.github.io/Verkefni-4/">Verkefni 4</a></li>
-				<li><a class="skipta" href="https://zkur1.github.io/Lokaverkefni_2019/vefsiða/">Fagraf</a></li>
-            		</ul>
-        		</nav>
-			</footer>
-		</div>
-	</div>
-</body>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="Tar Portal">
+        <meta name="author" content="Askur Hugi">
+        <title>Tar Portal</title>
+        <link rel="stylesheet" type="text/css" href="index.css">
+        <link rel="stylesheet" type="text/css" href="/Lokaverkefni_2019/vefsiða/normalize.css">
+        <link href="https://fonts.googleapis.com/css?family=Montserrat|Slabo+27px|Srisakdi" rel="stylesheet">
+        <link rel="icon" href="/Lokaverkefni_2019/myndir/tar_logo.png">
+    </head>
+    
+    <body>
+        <div class="container">
+            <div class="main" id="main">
+                <img src="Lokaverkefni_2019/myndir/tar_logo.png" id="logo" class="logo" />
+            </div>  
+        </div>
+
+        <script src="index.js"></script>
+    </body>
 </html>
