lowered size + website

--- a/index.html
+++ b/index.html
@@ -13,9 +13,41 @@
     
     <body>
         <div class="container">
-            <div class="main" id="main">
-                <img src="Lokaverkefni_2019/myndir/tar_logo.png" id="logo" class="logo" />
-            </div>  
+            <header>
+                <nav id="nav">
+                    <ul class="nav_ul" id="nav_ul">
+                        <li>Hugbúnaðarlausnir</li>
+                        <li>Afhverju við?</li>
+                        <li>Um okkur</li>
+                        <li>Hafðu samband</li>
+                    </ul>
+                </nav>
+                <img src="Lokaverkefni_2019/myndir/tar_logo2.png" class="logo" id="logo"/>
+            </header>
+            
+
+            <main id="main">
+                <div id="row_1" class="row_1">
+                    <div class="img_wrapper">
+                        <img src="Lokaverkefni_2019/myndir/phone2.jpg" id="img_app" class="img_app" />
+                    </div>
+                    <div class="text_container_1">
+                        <div class="textbox_1">Einföld og góð lausn á tímaskráningu starfsmanna.</div>
+                        <div class="textbox_2">Betra utanumhald á öllum eignum fyrirtækisins.</div>
+                    </div>
+                </div>
+                <div id="row_1" class="row_1">
+                    <div class="text_container_1">
+                        <div class="textbox_1">Einföld og góð lausn á tímaskráningu starfsmanna.</div>
+                        <div class="textbox_2">Betra utanumhald á öllum eignum fyrirtækisins.</div>
+                    </div>
+                    <div class="img_wrapper_2">
+                        <img src="Lokaverkefni_2019/myndir/lappi.jpg" id="img_laptop" class="img_laptop" />
+                    </div>
+                </div>
+            </main>  
+
+
         </div>
 
         <script src="index.js"></script>
