--- a/Lokaverkefni_2019/vefsiða/index.html
+++ b/Lokaverkefni_2019/vefsiða/index.html
@@ -73,7 +73,7 @@
                         <a href="starfsmenn/starfsmenn.html">Starfsmenn</a>
                     </li>
                     <li>
-                        <a href="stillingar/stillingar.html">Stillingar</a>
+                        <a href="timaskra/timaskra.html">Timaskrá</a>
                     </li>
                 </ul>
             </div>
