--- a/MySite/website/index.html
+++ b/MySite/website/index.html
@@ -22,7 +22,9 @@
                         <li>Hafðu samband</li>
                     </ul>
                 </nav>
-                <img src="/MySite/pictures/ah_logo.png" class="logo" id="logo"/>
+                <div id="logo_wrapper" class="logo_wrapper">
+                    <img src="/MySite/pictures/ah_logo.png" class="logo" id="logo"/>
+                </div>
             </header>
             
 
