--- a/Lokaverkefni_2019/vefsiða/bifreiðir/cars/bifreidir_default.html
+++ b/Lokaverkefni_2019/vefsiða/bifreiðir/cars/bifreidir_default.html
@@ -124,6 +124,10 @@
         <script src="https://www.gstatic.com/firebasejs/6.0.2/firebase-app.js"></script>
         <script src="https://www.gstatic.com/firebasejs/6.0.2/firebase-firestore.js"></script>
         <script src="https://www.gstatic.com/firebasejs/6.0.2/firebase-storage.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/6.0.2/firebase-auth.js"></script>
+
+        <script src="/vefsiða/config/initialization.js"></script>
+        <script src="/vefsiða/config/auth.js"></script>
         <script src="../bifreidir_scripts.js"></script>
         <script src="bifreidir_default_scripts.js"></script>
     </body>
