--- a/Lokaverkefni_2019/vefsiða/starfsmenn/starfsmenn.html
+++ b/Lokaverkefni_2019/vefsiða/starfsmenn/starfsmenn.html
@@ -100,6 +100,11 @@
         </div>
         <script src="https://www.gstatic.com/firebasejs/6.0.2/firebase-app.js"></script>
         <script src="https://www.gstatic.com/firebasejs/6.0.2/firebase-firestore.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/6.0.2/firebase-storage.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/6.0.2/firebase-auth.js"></script>
+
+        <script src="/vefsiða/config/initialization.js"></script>
+        <script src="/vefsiða/config/auth.js"></script>
         <script src="starfsmenn_scripts.js"></script>
     </body>
 </html>
