--- a/Lokaverkefni_2019/vefsiða/stillingar/stillingar.html
+++ b/Lokaverkefni_2019/vefsiða/stillingar/stillingar.html
@@ -74,6 +74,11 @@
         </div>
         <script src="https://www.gstatic.com/firebasejs/6.0.2/firebase-app.js"></script>
         <script src="https://www.gstatic.com/firebasejs/6.0.2/firebase-firestore.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/6.0.2/firebase-storage.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/6.0.2/firebase-auth.js"></script>
+
+        <script src="/vefsiða/config/initialization.js"></script>
+        <script src="/vefsiða/config/auth.js"></script>
         <script src="stillingar_scripts.js"></script>
     </body>
 </html>
