--- a/Lokaverkefni_2019/vefsiða/timaskra/staff_page/staff_page.html
+++ b/Lokaverkefni_2019/vefsiða/timaskra/staff_page/staff_page.html
@@ -27,6 +27,7 @@
                 <div class="button_div" id="button_div">
                     <button class="add_time_button" id="add_time_button">Skrá tíma</button>
                     <button class="view_time_button" id="view_time_button">Skoða mína tíma</button>
+                    <button class="logout_button" id="logout_button">Skrá út</button>
                 </div>
             </div>
 
@@ -67,8 +68,12 @@
         <script src="https://www.gstatic.com/firebasejs/6.0.2/firebase-app.js"></script>
         <script src="https://www.gstatic.com/firebasejs/6.0.2/firebase-firestore.js"></script>
         <script src="https://www.gstatic.com/firebasejs/6.0.2/firebase-storage.js"></script>
-        <script src="../timaskra_scripts.js"></script>
-        <script src="staff_page_scripts.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/6.0.2/firebase-auth.js"></script>
+
+        <script src="../../config/initialization.js"></script>
+        <script src="../../config/auth.js"></script>
         <script src="../../starfsmenn/staff/staff_default_scripts.js"></script>
+        <script src="staff_page_scripts.js"></script>
+        
     </body>
 </html>
