--- a/Lokaverkefni_2019/vefsiða/timaskra/staff_page/time_logging/time_logging.html
+++ b/Lokaverkefni_2019/vefsiða/timaskra/staff_page/time_logging/time_logging.html
@@ -129,7 +129,10 @@
         <script src="https://www.gstatic.com/firebasejs/6.0.2/firebase-app.js"></script>
         <script src="https://www.gstatic.com/firebasejs/6.0.2/firebase-firestore.js"></script>
         <script src="https://www.gstatic.com/firebasejs/6.0.2/firebase-storage.js"></script>
-        <script src="../../timaskra_scripts.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/6.0.2/firebase-auth.js"></script>
+
+        <script src="../../../config/initialization.js"></script>
+        <script src="../../../config/auth.js"></script>
         <script src="time_logging.js"></script>
     </body>
 </html>
