--- a/Lokaverkefni_2019/vefsiða/verkfaeri/verkfaeri_saga/verkfaeri_saga.html
+++ b/Lokaverkefni_2019/vefsiða/verkfaeri/verkfaeri_saga/verkfaeri_saga.html
@@ -59,6 +59,11 @@
         </div>
         <script src="https://www.gstatic.com/firebasejs/6.0.2/firebase-app.js"></script>
         <script src="https://www.gstatic.com/firebasejs/6.0.2/firebase-firestore.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/6.0.2/firebase-storage.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/6.0.2/firebase-auth.js"></script>
+
+        <script src="/vefsiða/config/initialization.js"></script>
+        <script src="/vefsiða/config/auth.js"></script>
         <script src="../../index_scripts.js"></script>
         <script src="verkfaeri_saga_scripts.js"></script>
     </body>
