--- a/Lokaverkefni_2019/vefsiða/bifreiðir/cars/vidhald_saga/vidhald_saga.html
+++ b/Lokaverkefni_2019/vefsiða/bifreiðir/cars/vidhald_saga/vidhald_saga.html
@@ -73,8 +73,8 @@
         <script src="https://www.gstatic.com/firebasejs/6.0.2/firebase-storage.js"></script>
         <script src="https://www.gstatic.com/firebasejs/6.0.2/firebase-auth.js"></script>
 
-        <script src="/vefsiða/config/initialization.js"></script>
-        <script src="/vefsiða/config/auth.js"></script>
+        <script src="/Lokaverkefni_2019/vefsiða/config/initialization.js"></script>
+        <script src="/Lokaverkefni_2019/vefsiða/config/auth.js"></script>
         <script src="../../../index_scripts.js"></script>
         <script src="vidhald_saga_scripts.js"></script>
     </body>
