--- a/Lokaverkefni_2019/vefsiða/index.html
+++ b/Lokaverkefni_2019/vefsiða/index.html
@@ -73,7 +73,7 @@
                         <a href="starfsmenn/starfsmenn.html">Starfsmenn</a>
                     </li>
                     <li>
-                        <a href="timaskra/timaskra.html">Timaskrá</a>
+                        <a href="timaskra/timaskra.html">Stillingar</a>
                     </li>
                 </ul>
             </div>
@@ -100,8 +100,8 @@
         <script src="https://www.gstatic.com/firebasejs/6.0.2/firebase-storage.js"></script>
         <script src="https://www.gstatic.com/firebasejs/6.0.2/firebase-auth.js"></script>
 
-        <script src="/vefsiða/config/initialization.js"></script>
-        <script src="/vefsiða/config/auth.js"></script>
+        <script src="/Lokaverkefni_2019/vefsiða/config/initialization.js"></script>
+        <script src="/Lokaverkefni_2019/vefsiða/config/auth.js"></script>
         <script src="index_scripts.js"></script>
     </body>
 </html>
