--- a/Lokaverkefni_2019/vefsiða/starfsmenn/staff/staff_default.html
+++ b/Lokaverkefni_2019/vefsiða/starfsmenn/staff/staff_default.html
@@ -80,8 +80,8 @@
         <script src="https://www.gstatic.com/firebasejs/6.0.2/firebase-storage.js"></script>
         <script src="https://www.gstatic.com/firebasejs/6.0.2/firebase-auth.js"></script>
 
-        <script src="/vefsiða/config/initialization.js"></script>
-        <script src="/vefsiða/config/auth.js"></script>
+        <script src="/Lokaverkefni_2019/vefsiða/config/initialization.js"></script>
+        <script src="/Lokaverkefni_2019/vefsiða/config/auth.js"></script>
         <script src="../starfsmenn_scripts.js"></script>
         <script src="staff_default_scripts.js"></script>
     </body>
