--- a/Lokaverkefni_2019/vefsiða/stillingar/stillingar.html
+++ b/Lokaverkefni_2019/vefsiða/stillingar/stillingar.html
@@ -77,8 +77,8 @@
         <script src="https://www.gstatic.com/firebasejs/6.0.2/firebase-storage.js"></script>
         <script src="https://www.gstatic.com/firebasejs/6.0.2/firebase-auth.js"></script>
 
-        <script src="/vefsiða/config/initialization.js"></script>
-        <script src="/vefsiða/config/auth.js"></script>
+        <script src="/Lokaverkefni_2019/vefsiða/config/initialization.js"></script>
+        <script src="/Lokaverkefni_2019/vefsiða/config/auth.js"></script>
         <script src="stillingar_scripts.js"></script>
     </body>
 </html>
