--- a/Lokaverkefni_2019/vefsiða/index.html
+++ b/Lokaverkefni_2019/vefsiða/index.html
@@ -66,41 +66,8 @@
                 <ul class="tool_section" id="tool_list">
                 </ul>
             </div>
-
-            <div class="navigation" id="navigation">
-                <ul>
-                    <li>
-                        <a href="index.html">Verkfæri</a>
-                    </li>
-                    <li>
-                        <a href="bifreiðir/bifreidir.html">Bifreiðir</a>
-                    </li>
-                    <li>
-                        <a href="starfsmenn/starfsmenn.html">Starfsmenn</a>
-                    </li>
-                    <li>
-                        <a href="stillingar/stillingar.html">Stillingar</a>
-                    </li>
-                </ul>
-            </div>
-
-            <div class="m_navigation" id="m_navigation">
-                <ul id="nav_ul">
-                    <li id="verkfaeri">
-                        <img class="icon" src="../myndir/tools.png" id="tool_icon">
-                    </li>
-                    <li id="bifreidir">
-                        <img class="icon" src="../myndir/car1.png" id="car_icon">
-                    </li >
-                    <li id="starfsmenn">
-                        <img class="icon" src="../myndir/staff.svg" id="staff_icon">
-                    </li>
-                    <li id="stillingar">
-                        <img class="icon" src="../myndir/settings.png" id="settings_icon">
-                    </li>
-                </ul>
-            </div>
         </div>
+        <script src="/Lokaverkefni_2019/vefsiða/config/nav.js"></script>
         <script src="index_scripts.js"></script>
     </body>
 </html>
