--- a/Lokaverkefni_2019/vefsiða/stillingar/stillingar.html
+++ b/Lokaverkefni_2019/vefsiða/stillingar/stillingar.html
@@ -26,42 +26,8 @@
             <div class="main" id="main">
                 <button id="logout_button" class="logout_button">Skrá út</button>
             </div>
-
-            <div class="navigation" id="navigation">
-                <ul>
-                    <li>
-                        <a href="../index.html">Verkfæri</a>
-                    </li>
-                    <li>
-                        <a href="../bifreiðir/bifreidir.html">Bifreiðir</a>
-                    </li>
-                    <li>
-                        <a href="../starfsmenn/starfsmenn.html">Starfsmenn</a>
-                    </li>
-                    <li>
-                        <a href="../stillingar/stillingar.html">Stillingar</a>
-                    </li>
-                </ul>
-            </div>
-
-            <div class="m_navigation" id="m_navigation">
-                <ul id="nav_ul">
-                    <li id="verkfaeri">
-                        <img class="icon" src="../../myndir/tools.png" id="tool_icon">
-                    </li>
-                    <li id="bifreidir">
-                        <img class="icon" src="../../myndir/car1.png" id="car_icon">
-                    </li >
-                    <li id="starfsmenn">
-                        <img class="icon" src="../../myndir/staff.svg" id="staff_icon">
-                    </li>
-                    <li id="stillingar">
-                        <img class="icon" src="../../myndir/settings.png" id="settings_icon">
-                    </li>
-                </ul>
-            </div>
         </div>
-        
+        <script src="/Lokaverkefni_2019/vefsiða/config/nav.js"></script>
         <script src="stillingar_scripts.js"></script>
     </body>
 </html>
