--- a/MySite/website/index.html
+++ b/MySite/website/index.html
@@ -6,6 +6,7 @@
         <meta name="author" content="Askur Hugi">
         <title>Tar Portal</title>
         <link rel="stylesheet" type="text/css" href="index.css">
+        <link rel="stylesheet" type="text/css" href="config/nav.css">
         <link rel="stylesheet" type="text/css" href="/Lokaverkefni_2019/vefsiða/normalize.css">
         <link href="https://fonts.googleapis.com/css?family=Montserrat|Slabo+27px|Srisakdi" rel="stylesheet">
         <link rel="icon" href="/MySite/pictures/ah_logo.png">
@@ -13,20 +14,8 @@
     
     <body>
         <div class="container">
-            <header>
-                <nav id="nav">
-                    <ul class="nav_ul" id="nav_ul">
-                        <li>Ég</li>
-                        <li>Afhverju ég?</li>
-                        <li>Um mig</li>
-                        <li>Verkefnin mín</li>
-                    </ul>
-                </nav>
-                <div id="logo_wrapper" class="logo_wrapper">
-                    <img src="/MySite/pictures/ah_logo.png" class="logo" id="logo"/>
-                </div>
+            <header id="header">
             </header>
-            
 
             <main id="main">
                 <div id="row_1" class="row_1">
@@ -52,10 +41,9 @@
                     </div>
                 </div>
             </main>  
-
-
         </div>
 
+        <script src="config/nav.js"></script>
         <script src="index.js"></script>
     </body>
 </html>
