--- a/MySite/website/index.html
+++ b/MySite/website/index.html
@@ -18,32 +18,12 @@
             </header>
 
             <main id="main">
-                <div id="row_1" class="row_1">
-                    <div class="img_wrapper">
-                        <img src="/MySite/pictures/front.jpg" id="img_app" class="img_app" />
-                    </div>
-                    <div class="text_container_1">
-                        <h2 class="textbox_title">Konráð, the Fiesta</h2>
-                        <p class="textbox_text">The Fiesta ST/XR4 was the performance model of this Fiesta. It includes a 2.0 L Duratec petrol engine rated at 150 PS (110 kW; 150 bhp) in standard form, with a top speed of 129 mph (208 km/h).[26] The Fiesta ST also features 17 in (43 cm) alloy wheels, disc brakes to all wheels, different front and rear bumpers, side skirts, body colour handles and bump strips, partial leather seats or an optional extra of heated full leather seats and a ST logo on the front seat backs and on the steering wheel.
-
-                            In Australia, the Fiesta ST was sold as the Fiesta XR4. To stay in line with all sports model Fords sold in Australia it received the 'XR' badging, instead of the 'ST' badging used in Europe. [27]
-                            
-                            The vehicle was unveiled at the 2004 Geneva Motor Show.[28].</p>
-                    </div>
-                </div>
-                <div id="row_1" class="row_1">
-                    <div class="text_container_1">
-                        <div class="textbox_title">Einföld og góð lausn á tímaskráningu starfsmanna.</div>
-                        <div class="textbox_text">Betra utanumhald á öllum eignum fyrirtækisins.</div>
-                    </div>
-                    <div class="img_wrapper_2">
-                        <img src="/MySite/pictures/me1.jpg" id="img_laptop" class="img_laptop" />
-                    </div>
-                </div>
+                <img src="/MySite/pictures/theboy.jpg" class="me_1" id="me_1" />
             </main>  
         </div>
 
         <script src="config/nav.js"></script>
+        <script src="config/resize_main.js"></script>
         <script src="index.js"></script>
     </body>
 </html>
