--- a/MySite/website/projects/projects.html
+++ b/MySite/website/projects/projects.html
@@ -18,10 +18,12 @@
             </header>
         
             <main id="main">
-                <ul class="project_list" id="project_list">
-                    <li id="gym_tracker">gym_tracker</li>
-                    <li id="cbo">CBO website</li>
-                </ul>
+                <div class="list_div" id="list_div">
+                    <ul class="project_list" id="project_list">
+                        <li id="gym_tracker">gym_tracker</li>
+                        <li id="cbo">CBO website</li>
+                    </ul>
+                </div>
             </main>
         </div>
 
