--- a/MySite/website/cars/cars.html
+++ b/MySite/website/cars/cars.html
@@ -4,7 +4,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Tar Portal">
         <meta name="author" content="Askur Hugi">
-        <title>Tar Portal</title>
+        <title>Askur H.</title>
         <link rel="stylesheet" type="text/css" href="cars.css">
         <link rel="stylesheet" type="text/css" href="../config/nav.css">
         <link rel="stylesheet" type="text/css" href="/Lokaverkefni_2019/vefsiða/normalize.css">
