--- a/MySite/website/index.html
+++ b/MySite/website/index.html
@@ -4,7 +4,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Tar Portal">
         <meta name="author" content="Askur Hugi">
-        <title>Tar Portal</title>
+        <title>Askur H.</title>
         <link rel="stylesheet" type="text/css" href="index.css">
         <link rel="stylesheet" type="text/css" href="config/nav.css">
         <link rel="stylesheet" type="text/css" href="/Lokaverkefni_2019/vefsiða/normalize.css">
@@ -18,7 +18,17 @@
             </header>
 
             <main id="main">
-                <img src="/MySite/pictures/theboy.jpg" class="me_1" id="me_1" />
+                <div class="text_container_1">
+                    <div class="textbox_title">Whatup?</div>
+                    <div class="textbox_text">Betra utanumhald á öllum eignum fyrirtækisins. Betra utanumhald á öllum eignum fyrirtækisins. Betra utanumhald á öllum eignum fyrirtækisins. Betra utanumhald á öllum eignum fyrirtækisins.</div>
+                </div>
+
+                <img src="/MySite/pictures/theboy.png" class="me_1" id="me_1" />
+                
+                <div class="text_container_1">
+                    <div class="textbox_title">Whatup?</div>
+                    <div class="textbox_text">Betra utanumhald á öllum eignum fyrirtækisins. Betra utanumhald á öllum eignum fyrirtækisins. Betra utanumhald á öllum eignum fyrirtækisins. Betra utanumhald á öllum eignum fyrirtækisins.</div>
+                </div>
             </main>  
         </div>
 
