--- a/MySite/website/projects/gym_tracker/gym_tracker.html
+++ b/MySite/website/projects/gym_tracker/gym_tracker.html
@@ -21,17 +21,17 @@
 
             <main class="main" id="main">
                 <div class="dropdown_div" id="dropdown_div">
-                    <input type="" placeholder="Líkamshluti" class="noSelect">
-                    <input type="" placeholder="Dags.">
-                    <input type="" placeholder="Tími">
+                    <input type="" placeholder="Líkamshluti" id="body_part">
+                    <input type="" placeholder="Dags." id="date">
+                    <input type="" placeholder="Tími" id="time">
                 </div>
 
                 <div class="save_div" id="save_div">
-                    <button>Skrá æfingu</button>
+                    <button id="save_button">Skrá æfingu</button>
                 </div>
 
                 <div class="history_div" id="history_div">
-                    <ul class="history_ul">
+                    <ul class="history_ul" id="history_ul">
                         <li>
                             <p>Líkamshluti</p>
                             <p>Dags.</p>
