--- a/MySite/website/projects/gym_tracker/gym_tracker.html
+++ b/MySite/website/projects/gym_tracker/gym_tracker.html
@@ -20,6 +20,8 @@
             </header>
 
             <main class="main" id="main">
+                <img src="/MySite/pictures/back.png" id="back" class="back" />
+                
                 <div class="dropdown_div" id="dropdown_div">
                     <input type="" placeholder="Líkamshluti" id="body_part">
                     <input type="" placeholder="Dags." id="date">
