--- a/MySite/website/cars/cars.html
+++ b/MySite/website/cars/cars.html
@@ -23,21 +23,22 @@
                         <img src="/MySite/pictures/front.jpg" id="img_fiesta" class="img_fiesta" />
                     </div>
                     <div class="text_container_1">
-                        <h2 class="textbox_title">Konráð, the Fiesta</h2>
+                        <h2 class="textbox_title">Konni, the Fiesta</h2>
                         <p class="textbox_text">The Fiesta ST/XR4 was the performance model of this Fiesta. It includes a 2.0 L Duratec petrol engine rated at 150 PS (110 kW; 150 bhp) in standard form, with a top speed of 129 mph (208 km/h).[26] The Fiesta ST also features 17 in (43 cm) alloy wheels, disc brakes to all wheels, different front and rear bumpers, side skirts, body colour handles and bump strips, partial leather seats or an optional extra of heated full leather seats and a ST logo on the front seat backs and on the steering wheel.
-
                             In Australia, the Fiesta ST was sold as the Fiesta XR4. To stay in line with all sports model Fords sold in Australia it received the 'XR' badging, instead of the 'ST' badging used in Europe. [27]
-                            
-                            The vehicle was unveiled at the 2004 Geneva Motor Show.[28].</p>
+                            The vehicle was unveiled at the 2004 Geneva Motor Show.[28].
+                        </p>
                     </div>
                 </div>
-                <div id="row_1" class="row_1">
-                    <div class="text_container_1">
-                        <div class="textbox_title">Einföld og góð lausn á tímaskráningu starfsmanna.</div>
-                        <div class="textbox_text">Betra utanumhald á öllum eignum fyrirtækisins.</div>
+                <div id="row_2" class="row_2">
+                    <div class="text_container_2">
+                        <h2 class="textbox_title_2">Lúlli, the Lancer</h2>
+                        <p class="textbox_text_2">May 2000 saw the release in Japan of the Lancer Cedia (meaning CEntury DIAmond); though in most markets the previous 1995 vintage Mirage-based Lancer continued on, built at Mitsubishi's Mizushima plant in Japan. The new model was available in sedan and station wagon forms. In Europe, the Lancer was not offered in some countries, being too close to the size of the Dutch-built Mitsubishi Carisma, so the Evo VII model sold there bore the Carisma name. This series of Lancer is still sold in Japan where the 2007 onwards generation Lancer is known as "Galant Fortis".
+                                In February 2003, for the 2004 model year, a heavily restyled Lancer surfaced with a front styling that brought it into line with the Mitsubishi corporate look, as well as a restyled rear, to further differentiate itself from the Lancer Evolution. The car's grille was then redesigned again in 2005 for the 2006 model year.
+                        </p>
                     </div>
                     <div class="img_wrapper_2">
-                        <img src="/MySite/pictures/me1.jpg" id="img_laptop" class="img_laptop" />
+                        <img src="/MySite/pictures/lancer1.jpg" id="img_lancer" class="img_lancer" />
                     </div>
                 </div>
             </main>  
