--- a/tar.is/website/index.html
+++ b/tar.is/website/index.html
@@ -7,7 +7,7 @@
         <meta name="author" content="Askur Hugi">
         <title>tar.is</title>
         <link rel="stylesheet" type="text/css" href="index.css">
-        <link rel="stylesheet" type="text/css" href="/website/config/nav/nav.css"></link>
+        <link rel="stylesheet" type="text/css" href="tar.is/website/config/nav/nav.css"></link>
         <link rel="stylesheet" type="text/css" href="config/normalize.css">
         <link href="https://fonts.googleapis.com/css?family=Montserrat|Slabo+27px|Srisakdi" rel="stylesheet">
         <link rel="icon" href="../pictures/logo/tar.png">
@@ -83,5 +83,5 @@
 
     <!-- Scripts -->
     <script src="index.js"></script>
-    <script src="/website/config/nav/nav.js"></script>
+    <script src="tar.is/website/config/nav/nav.js"></script>
 </html>
