--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     
     <body>
     <script>
-        window.open('tar.is/','_self')
+        window.open('/website/index.html','_self')
     </script>
 
     </body>
