--- a/tar.is/website/hugbunadur/hugbunadur.html
+++ b/tar.is/website/hugbunadur/hugbunadur.html
@@ -7,7 +7,8 @@
         <meta name="author" content="Askur Hugi">
         <title>tar.is</title>
         <link rel="stylesheet" type="text/css" href="/tar.is/website/hugbunadur/hugbunadur.css">
-        <link rel="stylesheet" type="text/css" href="/tar.is/website/config/nav/nav.css"></link>
+        <link rel="stylesheet" type="text/css" href="/tar.is/website/config/nav/nav.css">
+        <link rel="stylesheet" type="text/css" href="/tar.is/website/config/header/header.css">
         <link rel="stylesheet" type="text/css" href="/tar.is/website/config/normalize.css">
         <link href="https://fonts.googleapis.com/css?family=Montserrat:400,600,800&display=swap" rel="stylesheet">
         <link rel="icon" href="../../pictures/logo/tar.png">
@@ -16,15 +17,9 @@
     
     <body>
         <header>
-                <img id='menuIcon' class='menuIcon' src="/tar.is/pictures/icon/menu.png">
-                <img id='logo' class='logo' src="/tar.is/pictures/logo/circular.png">
-                <img id='searchIcon' class='searchIcon' src="/tar.is/pictures/icon/search.png">
         </header>
 
         <div id='main' class='main'>
-                <div id='menuOverlay' class='menuOverlay'>
-
-                </div>
                 <div id='inProgress' class='inProgress'>
                         <h1>Síða í vinnslu</h1>
                 </div>
@@ -33,6 +28,7 @@
 
         <footer></footer>
 
+        <script src='/tar.is/website/config/header/header.js'></script>
         <script src='/tar.is/website/config/nav/nav.js'></script>
         <script src='/tar.is/website/hugbunadur/hugbunadur.js'></script>
         
