--- a/tar.is/website/hafaSamband/hafaSamband.html
+++ b/tar.is/website/hafaSamband/hafaSamband.html
@@ -7,12 +7,13 @@
         <meta name="author" content="Askur Hugi">
         <title>tar.is</title>
         <link rel="stylesheet" type="text/css" href="/tar.is/website/hafaSamband/hafaSamband.css">
-        <link rel="stylesheet" type="text/css" href="/tar.is/website/config/nav/nav.css"></link>
+        <link rel="stylesheet" type="text/css" href="/tar.is/website/config/nav/nav.css">
         <link rel="stylesheet" type="text/css" href="/tar.is/website/config/header/header.css">
+        <link rel="stylesheet" type="text/css" href="/tar.is/website/config/footer/footer.css">
         <link rel="stylesheet" type="text/css" href="/tar.is/website/config/normalize.css">
-        <link href="https://fonts.googleapis.com/css?family=Montserrat:400,600,800&display=swap" rel="stylesheet">
-        <link rel="icon" href="../../pictures/logo/tar.png">
-        <link rel="apple-touch-icon" href="../../pictures/logo/tar.png">
+        <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600,800&display=swap" rel="stylesheet">
+        <link rel="icon" href="/tar.is/pictures/logo/circular.png">
+        <link rel="apple-touch-icon" href="/tar.is/pictures/logo/circular.png">
     </head>
     
     <body>
@@ -28,8 +29,9 @@
 
         <footer></footer>
 
-        <script src='/tar.is/website/config/header/header.js'></script>
         <script src='/tar.is/website/config/nav/nav.js'></script>
+        <script src='/tar.is/website/config/header/header.js'></script>
+        <script src='/tar.is/website/config/footer/footer.js'></script>
         <script src='/tar.is/website/hafaSamband/hafaSamband.js'></script>
         
 </html>
