--- a/tar.is/website/hugbunadur/hugbunadur.html
+++ b/tar.is/website/hugbunadur/hugbunadur.html
@@ -21,9 +21,13 @@
         </header>
 
         <div id='main' class='main'>
-                <div id='inProgress' class='inProgress'>
-                        <h1>Síða í vinnslu</h1>
+            <div id='section1' class='section1'>
+                <div class='s1Info'>
+                    <h1>Okkar þjónusta</h1>
+                    <h5>Hér hjá TAR bjóðum við upp á tvennskonar þjónustu. Annarsvegar skipulagshugbúnað og hinsvegar sérgerðan hugbúnað.</h5>
                 </div>
+                <img class="s1Devices" src='/tar.is/pictures/appOnDevice/devices2.png'>
+            </div>
         </div>
 
 
