--- a/tar.is/website/index.html
+++ b/tar.is/website/index.html
@@ -26,7 +26,7 @@
                 <img id='s1Iphone' class='s1Iphone' src='/tar.is/pictures/appOnDevice/iphone.png'>
                 <div id='s1Info' class='s1Info'>
                     <h1>Hugbúnaðarlausnir sérsniðnar þínum þörfum</h1>
-                    <h5>Hugbúnaðurinn frá TAR er góð lausn á skráningu allra eigna fyrirtækja.
+                    <h5>Hugbúnaðurinn frá TAR veitir yfirsín yfir allar eignir fyrirtæki þíns, eykur upplýsingaflæði og heldur nákvæmt bókhald frá uppsetningu.
                     </h5>
                 </div>
             </div>
