--- a/tar.is/website/hafaSamband/hafaSamband.html
+++ b/tar.is/website/hafaSamband/hafaSamband.html
@@ -21,8 +21,8 @@
         </header>
 
         <div id='main' class='main'>
-                <h1 class='title'>Hafðu samband</h1>
-                <h3 class='subtitle'>Fylltu í reitina hér fyrir neðan.</h3>
+                <h1 class='title'>Við viljum heyra frá þér</h1>
+                <h3 class='subtitle'>Hafðu samband hér fyrir neðan og við svörum eins fljótt og auðið er.</h3>
                 <div class='info'>
                         <div class='name'>
                                 <h3>Nafn:</h3>
@@ -40,7 +40,11 @@
                                 <h3>Fyrirspurn:</h3>
                                 <textarea class='textIn'></textarea>
                         </div>
+                        <div id='button' class='button'>
+                            <h3>Senda</h3>
+                        </div>
                 </div>
+                
         </div>
 
 
