--- a/tar.is/website/hugbunadur/hugbunadur.html
+++ b/tar.is/website/hugbunadur/hugbunadur.html
@@ -24,9 +24,27 @@
             <div id='section1' class='section1'>
                 <div class='s1Info'>
                     <h1>Okkar þjónusta</h1>
-                    <h5>Hér hjá TAR bjóðum við upp á tvennskonar þjónustu. Annarsvegar skipulagshugbúnað og hinsvegar sérgerðan hugbúnað.</h5>
+                    <h5>Hjá TAR bjóðum við upp á tvennskonar þjónustu. Annarsvegar skipulagshugbúnað og hinsvegar sérgerðan hugbúnað.</h5>
                 </div>
                 <img class="s1Devices" src='/tar.is/pictures/appOnDevice/devices2.png'>
+            </div>
+            <div id='section2' class='section2'>
+                <div class='s2Info'>
+                    <h2>Skipulagshugbúnaður</h2>
+                    <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum, dolore voluptate non ullam hic quo natus deleniti. 
+                        Nostrum consequatur sapiente sunt optio. Hic doloremque cumque repellendus voluptas architecto? Earum, suscipit.
+                    </h3>
+                </div>
+                <img class="s2Mobile" src='/tar.is/pictures/demo/fagraf_mobile.jpg'>
+            </div>
+            <div id='section3' class='section3'>
+                <div class='s3Info'>
+                    <h2>Sérbúnaður</h2>
+                    <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum, dolore voluptate non ullam hic quo natus deleniti. 
+                        Nostrum consequatur sapiente sunt optio. Hic doloremque cumque repellendus voluptas architecto? Earum, suscipit.
+                    </h3>
+                </div>
+                <img class="s3Mobile" src='/tar.is/pictures/demo/fagraf_mobile.jpg'>
             </div>
         </div>
 
