--- a/tar.is/website/hafaSamband/hafaSamband.html
+++ b/tar.is/website/hafaSamband/hafaSamband.html
@@ -21,30 +21,32 @@
         </header>
 
         <div id='main' class='main'>
-                <h1 class='title'>Við viljum heyra frá þér</h1>
-                <h3 class='subtitle'>Hafðu samband hér fyrir neðan og við svörum eins fljótt og auðið er.</h3>
-                <div class='info'>
-                        <div class='name'>
-                                <h3>Nafn:</h3>
-                                <input id="fname" class='nameIn'>
-                        </div>
-                        <div class='email'>
-                                <h3>Netfang:</h3>
-                                <input type='email' class='emailIn'>
-                        </div>
-                        <div class='phone'>
-                                <h3>Símanúmer:</h3>
-                                <input id='pnumber' class='phoneIn'>
-                        </div>
-                        <div class='text'>
-                                <h3>Fyrirspurn:</h3>
-                                <textarea class='textIn'></textarea>
-                        </div>
-                        <div id='button' class='button'>
-                            <h3>Senda</h3>
-                        </div>
-                </div>
-                
+        <div class='titles'>
+            <h1 class='title'>Við viljum heyra frá þér</h1>
+            <h3 class='subtitle'>Hafðu samband hér fyrir neðan og við svörum eins fljótt og auðið er.</h3>
+        </div>
+        <div class='info'>
+            <div class='name'>
+                    <h3>Nafn:</h3>
+                    <input id="fname" class='nameIn'>
+            </div>
+            <div class='email'>
+                    <h3>Netfang:</h3>
+                    <input type='email' class='emailIn'>
+            </div>
+            <div class='phone'>
+                    <h3>Símanúmer:</h3>
+                    <input id='pnumber' class='phoneIn'>
+            </div>
+            <div class='text'>
+                    <h3>Fyrirspurn:</h3>
+                    <textarea class='textIn'></textarea>
+            </div>
+            <div id='button' class='button'>
+                    <h3>Senda</h3>
+            </div>
+        </div>
+        
         </div>
 
 
