--- a/tar.is/website/hafaSamband/hafaSamband.html
+++ b/tar.is/website/hafaSamband/hafaSamband.html
@@ -22,7 +22,7 @@
 
         <div id='main' class='main'>
                 <h1 class='title'>Við viljum heyra frá þér</h1>
-                <h3 class='subtitle'>Hafðu samband hér fyrir neðan og við svörum eins fljótt og auðið er.</h3>
+                <h3 class='subtitle'>Sendu fyrirspurn hér fyrir neðan eða á netfangið tar@tar.is og við svörum eins fljótt og auðið er.</h3>
                 <div class='info'>
                         <div class='name'>
                                 <h3>Nafn:</h3>
