--- a/tar.is/website/hafaSamband/hafaSamband.html
+++ b/tar.is/website/hafaSamband/hafaSamband.html
@@ -21,8 +21,10 @@
         </header>
 
         <div id='main' class='main'>
+            <div class='titles'>
                 <h1 class='title'>Við viljum heyra frá þér</h1>
-                <h3 class='subtitle'>Sendu fyrirspurn hér fyrir neðan eða á netfangið tar@tar.is og við svörum eins fljótt og auðið er.</h3>
+                <h3 class='subtitle'>Sendu fyrirspurn hér fyrir neðan eða á netfangið tar@tar.is og við svörum eins fljótt og auðið er.</h3> 
+            </div>
                 <div class='info'>
                         <div class='name'>
                                 <h3>Nafn:</h3>
