--- a/tar.is/website/hafaSamband/hafaSamband.html
+++ b/tar.is/website/hafaSamband/hafaSamband.html
@@ -27,20 +27,17 @@
             </div>
                 <div class='info'>
                         <div class='name'>
-                                <h3>Nafn:</h3>
-                                <input id="fname" class='nameIn'>
+                                <h3></h3>
+                                <input id="fname" class='nameIn' placeholder="Nafn">
                         </div>
                         <div class='email'>
-                                <h3>Netfang:</h3>
-                                <input type='email' class='emailIn'>
+                                <input type='email' class='emailIn' placeholder="Netfang">
                         </div>
                         <div class='phone'>
-                                <h3>Símanúmer:</h3>
-                                <input id='pnumber' class='phoneIn'>
+                                <input id='pnumber' class='phoneIn' placeholder="Símanúmer">
                         </div>
                         <div class='text'>
-                                <h3>Fyrirspurn:</h3>
-                                <textarea class='textIn'></textarea>
+                                <textarea class='textIn' placeholder="Fyrirspurn"></textarea>
                         </div>
                         <div id='button' class='button'>
                             <h3>Senda</h3>
