--- a/tar.is/website/hugbunadur/hugbunadur.html
+++ b/tar.is/website/hugbunadur/hugbunadur.html
@@ -23,28 +23,31 @@
         <div id='main' class='main'>
             <div id='section1' class='section1'>
                 <div class='s1Info'>
-                    <h1>Okkar þjónusta</h1>
-                    <h5>Hjá TAR bjóðum við upp á tvennskonar þjónustu. Annarsvegar skipulagshugbúnað og hinsvegar sérgerðan hugbúnað.</h5>
+                    <h1>Nútímavæðing, þægindi og fagmennska í þínu fyrirtæki.</h1>
                 </div>
-                <img class="s1Devices" src='/tar.is/pictures/appOnDevice/devices2.png'>
+                <div class='imgWrap'>
+                <img class="s1Mobile" src='/tar.is/pictures/demo/fagraf_mobile.jpg'>
+                </div>
             </div>
             <div id='section2' class='section2'>
                 <div class='s2Info'>
                     <h2>Skipulagshugbúnaður</h2>
-                    <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum, dolore voluptate non ullam hic quo natus deleniti. 
-                        Nostrum consequatur sapiente sunt optio. Hic doloremque cumque repellendus voluptas architecto? Earum, suscipit.
+                    <h3 class="infoText">Hugbúnaðurinn úthlutar öllum starfsmönnum, verkfærum og bifreiðum sértök númer sem einkenna hvert verkfæri/bifreið/stafsmann. 
+                        Þannig er hægt skrá hvert verkfæri/bifreið á hvaða starfsmann sem er. Yfirmenn geta því séð hvar, hvenær og hver er með hvert verkfæri.
                     </h3>
                 </div>
-                <img class="s2Mobile" src='/tar.is/pictures/demo/fagraf_mobile.jpg'>
+                <img class="s2Mobile" src='/tar.is/pictures/appOnDevice/iphone.png'>
             </div>
             <div id='section3' class='section3'>
                 <div class='s3Info'>
-                    <h2>Sérbúnaður</h2>
-                    <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum, dolore voluptate non ullam hic quo natus deleniti. 
-                        Nostrum consequatur sapiente sunt optio. Hic doloremque cumque repellendus voluptas architecto? Earum, suscipit.
+                    <h3 class="infoText">Utanumhald á bifreiðum verður einfaldara og með einum smelli er hægt að sjá nákvæmlega hvenær bíllinn á að fara í þjónustuskoðun eða dekkjaskipti. 
+                        Þetta gefur yfirmönnum góða yfirsýn yfir allar eignir fyrirtækisins.
                     </h3>
                 </div>
-                <img class="s3Mobile" src='/tar.is/pictures/demo/fagraf_mobile.jpg'>
+                <img class="s3Mobile" src='/tar.is/pictures/appOnDevice/ipad.png'>
+            </div>
+            <div id='s2Button' class='s2Button'>
+                <h3>Fáðu tilboð</h3>
             </div>
         </div>
 
