--- a/tar.is/website/index.html
+++ b/tar.is/website/index.html
@@ -55,8 +55,8 @@
                     <h3 class='s3Text'>Við tökum að okkur að hanna og forrita vefsíður fyrir allar tegundir fyrirtækja. 
                         Hafðu samband og við tryggðu þér hágæða vefsíðu á betra verði.
                     </h3>
-                    <div id='s3Button' class='s3Button'>
-                        <h3>Skoða nánar</h3>
+                    <div id='s3Button' class='s2Button'>
+                        <h3>Hafa samband</h3>
                     </div>
                 </div>
                 
