--- a/tar.is/website/hafaSamband/hafaSamband.html
+++ b/tar.is/website/hafaSamband/hafaSamband.html
@@ -27,14 +27,13 @@
             </div>
                 <div class='info'>
                         <div class='name'>
-                                <h3></h3>
-                                <input id="fname" class='nameIn' placeholder="Nafn">
-                        </div>
-                        <div class='email'>
-                                <input type='email' class='emailIn' placeholder="Netfang">
+                            <input id="fname" class='nameIn' placeholder="Nafn">
                         </div>
                         <div class='phone'>
                                 <input id='pnumber' class='phoneIn' placeholder="Símanúmer">
+                        </div>
+                        <div class='subject'>
+                            <input type='subject' class='subjectIn' placeholder="Viðfangsefni">
                         </div>
                         <div class='text'>
                                 <textarea class='textIn' placeholder="Fyrirspurn"></textarea>
