--- a/hadditaxi.is/website/index.html
+++ b/hadditaxi.is/website/index.html
@@ -26,7 +26,7 @@
                 <div id='subTitleDiv' class='subTitleDiv'>
                     <span class='subTitle'>Need a personal driver around the golden circle or just around town? If so I'm here to help!</span>
                 </div>
-                <img class='clipArt' src='/hadditaxi.is/pictures/clipArt600.png'>
+                <img class='clipArt' src='/hadditaxi.is/pictures/clipARt600.png'>
                 <div id='callOrBookDiv' class='callOrBookDiv'>
                     <div>
                         <span>call: </span>
