Looks + mini texta lögun

--- a/tar.is/website/hugbunadur/hugbunadur.html
+++ b/tar.is/website/hugbunadur/hugbunadur.html
@@ -40,8 +40,7 @@
             </div>
             <div id='section3' class='section3'>
                 <div class='s3Info'>
-                    <h3 class="infoText">Utanumhald á bifreiðum verður einfaldara og með einum smelli er hægt að sjá nákvæmlega hvenær bíllinn á að fara í þjónustuskoðun eða dekkjaskipti. 
-                        Þetta gefur yfirmönnum góða yfirsýn yfir allar eignir fyrirtækisins.
+                    <h3 class="infoText">Utanumhald á bifreiðum verður einnig einfaldara og með einum smelli er hægt að sjá nákvæmlega hvaða starfsmaður er skráður á hvern bíl og hvenær bíllinn á að fara í þjónustuskoðun eða dekkjaskipti.
                     </h3>
                     <div id='s2Button' class='s2Button'>
                         <h3>Fáðu tilboð</h3>
