--- a/tar.is/website/index.html
+++ b/tar.is/website/index.html
@@ -26,7 +26,7 @@
                 <img id='s1Iphone' class='s1Iphone' src='/tar.is/pictures/appOnDevice/tarIphone.png'>
                 <div id='s1Info' class='s1Info'>
                     <h1>Hugbúnaðarlausnir sérsniðnar þínum þörfum</h1>
-                    <h5>Hugbúnaðurinn frá TAR veitir yfirsín yfir allar eignir fyrirtæki þíns, eykur upplýsingaflæði og heldur nákvæmt bókhald frá uppsetningu.
+                    <h5>Hugbúnaðurinn frá TAR veitir yfirsín yfir allar eignir fyrirtæki þíns, eykur upplýsingaflæði og heldur nákvæmt eignabókhald frá uppsetningu.
                     </h5>
                 </div>
             </div>
@@ -38,7 +38,7 @@
                     <h2>Skipulag</h2>
                     <h3 class="s2Text">Hugbúnaðurinn frá TAR er góð lausn á skráningu allra eigna fyrirtækja. 
                         Verkfæri og bifreiðar eru vistaðar í hugbúnaðinn og þar er hægt að sjá 
-                        hvar verkfærin eru staðsett og hvaða starfsmaður/verk er skráð á þau
+                        hvar eignin er staðsett, hver ábyrgðaraðili hennar er og hvenær hún var skráð út.
                     </h3>
                     <div id='s2Button' class='s2Button'>
                         <h3>Skoða nánar</h3>
